--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,8 @@ django-search-admin-autocomplete==0.2.1
 django-simple-history==3.10.1
 django-use-email-as-username==1.4.0
 idna==3.10
+numpy==2.3.5
+OSGridConverter==0.1.3
 pillow==11.3.0
 requests==2.32.5
 soupsieve==2.8
