--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ django-multiselectfield==1.0.1
 django-search-admin-autocomplete==0.2.1
 django-simple-history==3.10.1
 django-use-email-as-username==1.4.0
+Faker==38.2.0
 idna==3.10
 OSGridConverter==0.1.3
 pillow==11.3.0
@@ -16,5 +17,6 @@ requests==2.32.5
 soupsieve==2.8
 sqlparse==0.5.3
 typing_extensions==4.15.0
+tzdata==2025.2
 Unidecode==1.4.0
 urllib3==2.5.0
