--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ django-search-admin-autocomplete==0.2.1
 django-simple-history==3.10.1
 django-use-email-as-username==1.4.0
 Faker==38.2.0
+geojson==3.2.0
 idna==3.10
 OSGridConverter==0.1.3
 pillow==11.3.0
